[gd_scene load_steps=6 format=3 uid="uid://cc8vjr013abs2"]

[ext_resource type="Texture2D" uid="uid://lorkjoge4122" path="res://assets/wood1.png" id="1_o2ohh"]
[ext_resource type="Script" uid="uid://47uux3cruqrm" path="res://Items/wood_item.gd" id="1_p4hhd"]
[ext_resource type="PackedScene" uid="uid://bj231fwlkibf5" path="res://HoverIcon/hover_icon.tscn" id="3_4h7vp"]
[ext_resource type="Texture2D" uid="uid://bwhw1px0fsako" path="res://assets/UI/arrow-down.png" id="4_7hwro"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p4hhd"]
radius = 9.0

[node name="WoodItem" type="Node2D"]
script = ExtResource("1_p4hhd")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_o2ohh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_p4hhd")

[node name="HoverIcon" parent="." instance=ExtResource("3_4h7vp")]
visible = false
position = Vector2(0, -9)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("4_7hwro")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
